2002-12-06  Paul Eggert  <eggert@twinsun.com>

	Undo the 2001-07-02 change for jm-glibc-io, as it was too much of
	a pain in practice to deal with generated m4 files.  This change
	goes together with the 2002-12-04 unlocked-io.h change in ../lib.

	* Makefile.am.in (Makefile.am): Don't mention jm-glibc-io.m4n
	and jm-glibc-io.m4, as they are no longer a special case.
	* jm-glibc-io.m4: Rename from jm-glibc-io.m4n, and remove the
	kludge and the auto-generation stuff.  Check only whether the
	functions are declared, not whether they exist, since older hosts
	that don't declare the functions can't use the optimization anyway.

2002-07-06  Jim Meyering  <meyering@lucent.com>

	* README: Don't mention Makefile.am.in.
	Outline how I've tested changes to .m4 files.  Yep, it's a pain.

2002-06-11  Paul Eggert  <eggert@twinsun.com>

	* fnmatch.m4 (_AC_LIBOBJ_FNMATCH): Check for btowc.

2002-06-22  Jim Meyering  <meyering@lucent.com>

	* c-stack.m4: New file, from diffutils-2.8.2.
	* prereq.m4 (jm_PREREQ): Add jm_PREREQ_C_STACK.

	* jm-macros.m4 (jm_CHECK_ALL_TYPES): Don't require AC__GNU_SOURCE,
	now that configure.ac uses AC_GNU_SOURCE.
	(jm_MACROS): Rename: jm_FUNC_FNMATCH to AC_FUNC_FNMATCH_GNU.
	* prereq.m4 (jm_PREREQ_EXCLUDE): Likewise, wrt jm_FUNC_FNMATCH.

	Update to latest tools.  Suggestions from Paul Eggert.
	* stdbool.m4: New file, from diffutils-2.8.2.
	* gnu-source.m4: Update from diffutils-2.8.2.
	* fnmatch.m4: Likewise.
	* prereq.m4: Change each use of AC_CHECK_HEADERS(stdbool.h)
	to AC_HEADER_STDBOOL

2002-06-21  Jim Meyering  <meyering@lucent.com>

	* c-bs-a.m4: Add comment, from diffutils-2.8.2.
	* mbrtowc.m4: Likewise.

	* mbstate_t.m4: Update from diffutils-2.8.2.
	* mbswidth.m4: Reflect name change:
	s/AC_MBSTATE_T/AC_TYPE_MBSTATE_T.
	* prereq.m4 (jm_PREREQ_QUOTEARG): Likewise.

	* lib-link.m4: Update from gettext-0.11.2.
	* gettext.m4: Likewise.

	* jm-macros.m4 (jm_CHECK_ALL_HEADERS): Check for hurd.h.
	From Alfred M. Szmidt.
